Add content grid and headline

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin&family=Arbutus+Slab&display=swap" rel="stylesheet">
   <title>Positioning and Floating Elements</title>
 </head>
 <body>
@@ -23,7 +23,7 @@
       </div>
     </header>
     <section class="wrapper">
-
+      <h1>Space Ripples Reveal Big Bang’s Smoking Gun</h1>
     </section>
 </body>
 </html>
