--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
     </header>
     <section class="wrapper">
       <h1>Space Ripples Reveal Big Bang’s Smoking Gun</h1>
+      <figure>
+        <img src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-articleLarge.jpg?quality=75&auto=webp&disable=upscale" alt="Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.Credit...">
+        <figcaption>Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the<br>universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago. <span>Rick<br>Friedman for The New York Times</span></figcaption>
+      </figure>
+      <p>Fucking lort</p>
     </section>
 </body>
 </html>
