Finish article meta part

--- a/index.html
+++ b/index.html
@@ -28,7 +28,43 @@
         <img src="https://static01.nyt.com/images/2014/03/18/science/space/18cosmos/18cosmos-articleLarge.jpg?quality=75&auto=webp&disable=upscale" alt="Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.Credit...">
         <figcaption>Alan Guth was one of the first physicists to hypothesize the existence of inflation, which explains how the<br>universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago. <span>Rick<br>Friedman for The New York Times</span></figcaption>
       </figure>
-      <p>Fucking lort</p>
+      
+      <!-- create section with author and article meta -->
+      <section class="article-meta">
+        <p>By <span>Dennis Overbye</span></  p>
+        <section>
+          <span>March 17, 2014</span>
+          <ul>
+            <li>
+              <img class="social" src="images/facebook-icon.svg"   alt="Facebook share icon">
+            </li>
+            <li>
+              <img class="social" src="images/twitter-icon.svg"   alt="Twitter share icon">
+            </li>
+            <li>
+              <img class="social" src="images/message-icon.svg"   alt="Message icon">
+            </li>
+            <li>
+              <img class="social" src="images/share-icon.svg" alt="Share   icon">
+            </li>
+            <li>
+              <svg stroke="none" width="16px" height="25px" viewBox="0 0 16 25">
+                <g stroke="#666" fill="none">
+                  <path fill="none" d="M0.5,0.5 L0.5,24.5 L8.1716264,19.5137775 L15.5,24.4404006 L15.5,0.5 L0.5,0.5 Z">
+                  </path>
+                </g>
+              </svg>
+            </li>
+            <li>
+              <button type="button" aria-label="615 comments. Click to read and post comments.">
+                <i>
+                  <span>615</span>
+                </i>
+              </button>
+            </li>
+          </ul>
+        </section>
+      </section>
     </section>
 </body>
 </html>
