Create aside suggestions

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin&family=Arbutus+Slab&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;600&family=Arbutus+Slab&display=swap" rel="stylesheet">
   <title>Positioning and Floating Elements</title>
 </head>
 <body>
@@ -33,7 +33,7 @@
       
       <!-- create section with author and article meta -->
       <section class="article-meta">
-        <p>By <span>Dennis Overbye</span></  p>
+        <p>By <a href="#">Dennis Overbye</a></p>
         <section>
           <span>March 17, 2014</span>
           <ul>
@@ -80,6 +80,8 @@
         <p>
           “SPECTACULAR REALIZATION,” Dr. Guth wrote across the top of the page and drew a double box around it.
         </p>
+      </section>
+      <section class="article-text">
         <p>  
           On Monday, Dr. Guth’s starship came in. Radio astronomers reported that they had seen the beginning of the Big Bang, and that his hypothesis, known undramatically as inflation, looked right.
         </p>
@@ -101,6 +103,8 @@
         <p>
           Confirming inflation would mean that the universe we see, extending 14 billion light-years in space with its hundreds of billions of galaxies, is only an infinitesimal patch in a larger cosmos whose extent, architecture and fate are unknowable. Moreover, beyond our own universe there might be an endless number of other universes bubbling into frothy eternity, like a pot of pasta water boiling over.
         </p>
+      </section>
+      <section class="article-text">
         <h2>
           ‘As Big as It Gets’
         </h2>
@@ -122,7 +126,7 @@
       </section>
       <figure id="theory-of-inflation" class="wide">
         <figcaption>
-          <h1>The Theory of Inflation</h1>
+          <h2>The Theory of Inflation</h2>
           Astronomers have found evidence to support the theory of inflation, which explains how the universe expanded so uniformly and so quickly in the instant after the Big Bang 13.8 billion years ago.
         </figcaption>
         <img src="https://static01.nyt.com/newsgraphics/2014/03/18/theory-of-inflation/1ebaa1b972edda0f407fbaa0e010f6b50fb6792e/inflation-945.png" alt="Drawings showing The Theory of Inflation">
@@ -292,6 +296,30 @@
           </ul>
         </div>
       </footer>
+      <aside>
+        <h2>Editors' picks</h2>
+        <hr>
+        <ul>
+          <li>
+            <a href="#">
+              <img src="https://static01.nyt.com/images/2020/04/09/realestate/09hunt-02/09hunt-02-square640-v3.png?quality=75&auto=webp&disable=upscale&width=350" alt="These Young Renters Wanted a Starter Apartment in Manhattan for a Reasonable Price. Here’s What They Found.">
+              <h3>These Young Renters Wanted a Starter Apartment in Manhattan for a Reasonable Price. Here’s What They Found.</h3>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="https://static01.nyt.com/images/2020/04/03/nyregion/03NYVIRUS-PHOTOS-HOSPITALS20/03NYVIRUS-PHOTOS-HOSPITALS20-square640.jpg?quality=75&auto=webp&disable=upscale&width=350" alt="What New York Looks Like Now: A Photo Journey">
+              <h3>What New York Looks Like Now: A Photo Journey</h3>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <img src="https://static01.nyt.com/images/2020/04/26/books/review/07Ignatieff/07Ignatieff-square640.jpg?quality=75&auto=webp&disable=upscale&width=350" alt="How Racism Is Destroying America">
+              <h3>How Racism Is Destroying America</h3>
+            </a>
+          </li>
+        </ul>
+      </aside>
     </article>
 </body>
 </html>
