Start working on bottom suggestions

--- a/index.html
+++ b/index.html
@@ -321,5 +321,65 @@
         </ul>
       </aside>
     </article>
+    <section class="extra-reading">
+      <section class="most-popular">
+        <h2>Most Popular</h2>
+        <h3>Examining Tara Reade’s Sexual Assault Allegation Against Joe Biden</h3>
+      </section>
+      <section class="space">
+        <h2>More in Space and Astronomy</h2>
+        <section>
+          <figure>
+            <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-BREAKUP1/07SCI-BREAKUP1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="Gemini Observatory, via Reuters">
+            <small>Gemini Observatory, via Reuters</small>
+          </figure>
+          <h3>It Came From Outside Our Solar System and Now It’s Breaking Up</h3>
+          <time aria-label="April 7">April 7</time>
+        </section>
+        <section>
+          <figure>
+            <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-BREAKUP1/07SCI-BREAKUP1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="Gemini Observatory, via Reuters">
+            <small>Gemini Observatory, via Reuters</small>
+          </figure>
+          <h3>It Came From Outside Our Solar System and Now It’s Breaking Up</h3>
+          <time aria-label="April 7">April 7</time>
+        </section>
+        <section>
+          <figure>
+            <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-BREAKUP1/07SCI-BREAKUP1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="Gemini Observatory, via Reuters">
+            <small>Gemini Observatory, via Reuters</small>
+          </figure>
+          <h3>It Came From Outside Our Solar System and Now It’s Breaking Up</h3>
+          <time aria-label="April 7">April 7</time>
+        </section>
+        <section>
+          <figure>
+            <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-BREAKUP1/07SCI-BREAKUP1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="Gemini Observatory, via Reuters">
+            <small>Gemini Observatory, via Reuters</small>
+          </figure>
+          <h3>It Came From Outside Our Solar System and Now It’s Breaking Up</h3>
+          <time aria-label="April 7">April 7</time>
+        </section>
+        <section>
+          <figure>
+            <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-BREAKUP1/07SCI-BREAKUP1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="Gemini Observatory, via Reuters">
+            <small>Gemini Observatory, via Reuters</small>
+          </figure>
+          <h3>It Came From Outside Our Solar System and Now It’s Breaking Up</h3>
+          <time aria-label="April 7">April 7</time>
+        </section>
+        <section>
+          <figure>
+            <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-BREAKUP1/07SCI-BREAKUP1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="Gemini Observatory, via Reuters">
+            <small>Gemini Observatory, via Reuters</small>
+          </figure>
+          <h3>It Came From Outside Our Solar System and Now It’s Breaking Up</h3>
+          <time aria-label="April 7">April 7</time>
+        </section>
+      </section>
+      <section class="editors-picks">
+        <h2>Editor's Picks</h2>
+      </section>
+    </section>
 </body>
 </html>
