Do more work on the suggestions area

--- a/index.html
+++ b/index.html
@@ -328,57 +328,60 @@
       </section>
       <section class="space">
         <h2>More in Space and Astronomy</h2>
-        <section>
-          <figure>
-            <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-BREAKUP1/07SCI-BREAKUP1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="Gemini Observatory, via Reuters">
-            <small>Gemini Observatory, via Reuters</small>
-          </figure>
-          <h3>It Came From Outside Our Solar System and Now It’s Breaking Up</h3>
-          <time aria-label="April 7">April 7</time>
+        <section class="article-grid">  
+          <section>
+            <figure>
+              <img src="https://static01.nyt.com/images/2020/04/13/science/13SCI-APOLLO13-sm2/13SCI-APOLLO13-sm2-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="The damaged service module of the Apollo 13 mission, floating away after the astronauts jettisoned it before re-entry back to Earth.">
+              <small>NASA</small>
+            </figure>
+            <h3>Apollo 13’s Astronauts Survived Disaster 50 Years Ago. Could It Happen Again?</h3>
+            <time aria-label="12 h ago">12 h ago</time>
+          </section>
+          <section>
+            <figure>
+              <img src="https://static01.nyt.com/images/2020/04/12/us/apollo-13-moon-photos-as-they-shot-it-promo-1586728596196/apollo-13-moon-photos-as-they-shot-it-promo-1586728596196-threeByTwoSmallAt2X-v3.jpg?quality=75&auto=webp&disable=upscale" alt="">
+              <small></small>
+            </figure>
+            <h3>Apollo 13: As They Shot It</h3>
+            <time aria-label="12 h ago">12 h ago</time>
+          </section>
+          <section>
+            <figure>
+              <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-BREAKUP1/07SCI-BREAKUP1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="The comet 2I/Borisov captured by the Gemini North telescope in Hawaii in September.">
+              <small>Gemini Observatory, via Reuters</small>
+            </figure>
+            <h3>It Came From Outside Our Solar System and Now It’s Breaking Up</h3>
+            <time aria-label="April 7">April 7</time>
+          </section>
+          <section>
+            <figure>
+              <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-BLACKHOLE1/07SCI-BLACKHOLE1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="">
+              <small>Video by J.Y. Kim et al., Astronomy & Astrophysics<br>(2020)/Event Horizon Telescope</small>
+            </figure>
+            <h3>Blowtorch of the Gods Captured by Black Hole Image Makers</h3>
+            <time aria-label="April 7">April 7</time>
+          </section>
+          <section>
+            <figure>
+              <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-DARKMATTER-promo/07SCI-DARKMATTER-promo-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="">
+              <small>Gabby Jones for The New York Times</small>
+            </figure>
+            <h3>Will Coronavirus Freeze the Search for Dark Matter?</h3>
+            <time aria-label="April 7">April 7</time>
+          </section>
+          <section>
+            <figure>
+              <img src="https://static01.nyt.com/images/2020/04/06/science/06NASA1/06NASA1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="The “worm” logo was designed by Bruce Blackburn. He and his design firm partner, Richard Danne, overhauled the visual appearance for NASA in 1975.">
+              <small>Derek Brahney</small>
+            </figure>
+            <h3>NASA’s ‘Worm’ Logo Will Return to Space</h3>
+            <time aria-label="April 6">April 6</time>
+          </section>
         </section>
-        <section>
-          <figure>
-            <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-BREAKUP1/07SCI-BREAKUP1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="Gemini Observatory, via Reuters">
-            <small>Gemini Observatory, via Reuters</small>
-          </figure>
-          <h3>It Came From Outside Our Solar System and Now It’s Breaking Up</h3>
-          <time aria-label="April 7">April 7</time>
+        <hr>
+        <section class="editors-picks">
+          <h2>Editor's Picks</h2>
         </section>
-        <section>
-          <figure>
-            <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-BREAKUP1/07SCI-BREAKUP1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="Gemini Observatory, via Reuters">
-            <small>Gemini Observatory, via Reuters</small>
-          </figure>
-          <h3>It Came From Outside Our Solar System and Now It’s Breaking Up</h3>
-          <time aria-label="April 7">April 7</time>
-        </section>
-        <section>
-          <figure>
-            <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-BREAKUP1/07SCI-BREAKUP1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="Gemini Observatory, via Reuters">
-            <small>Gemini Observatory, via Reuters</small>
-          </figure>
-          <h3>It Came From Outside Our Solar System and Now It’s Breaking Up</h3>
-          <time aria-label="April 7">April 7</time>
-        </section>
-        <section>
-          <figure>
-            <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-BREAKUP1/07SCI-BREAKUP1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="Gemini Observatory, via Reuters">
-            <small>Gemini Observatory, via Reuters</small>
-          </figure>
-          <h3>It Came From Outside Our Solar System and Now It’s Breaking Up</h3>
-          <time aria-label="April 7">April 7</time>
-        </section>
-        <section>
-          <figure>
-            <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-BREAKUP1/07SCI-BREAKUP1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="Gemini Observatory, via Reuters">
-            <small>Gemini Observatory, via Reuters</small>
-          </figure>
-          <h3>It Came From Outside Our Solar System and Now It’s Breaking Up</h3>
-          <time aria-label="April 7">April 7</time>
-        </section>
-      </section>
-      <section class="editors-picks">
-        <h2>Editor's Picks</h2>
       </section>
     </section>
 </body>
