Finish article suggestions bottom area

--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
         </p>
       </section>
       <footer>
-        <small>
+        <figcaption>
           A version of this article appears in print on March 18, 2014, Section A, Page 1 of the New York edition with the headline: Space Ripples Reveal Big Bang’s Smoking Gun. <a href="#">Order Reprints</a> | <a href="#">Today’s Paper</a> | <a href="#">Subscribe</a>
-        </small>
+        </figcaption>
         <div>
           <button class="btn">read 615 comments</button>
           <ul>
@@ -324,63 +324,101 @@
     <section class="extra-reading">
       <section class="most-popular">
         <h2>Most Popular</h2>
-        <h3>Examining Tara Reade’s Sexual Assault Allegation Against Joe Biden</h3>
+        <a href="#"><h3>Opinion: It’s Obvious Whom Joe Biden Should Pick as Vice President</h3></a>
+        <a href="#"><h3>The Food Expiration Dates You Should Actually Follow</h3></a>
+        <a href="#"><h3>Hank Steinbrenner, Heir to the Yankees, Is Dead at 63</h3></a>
+        <a href="#"><h3>Pastor Who Defied Social Distancing Dies After Contracting Covid-19, Church Says</h3></a>
+        <a href="#"><h3>‘This Is Going to Kill Small-Town America’</h3></a>
+        <a href="#"><h3>Opinion: What to Do With Tara Reade’s Allegation Against Joe Biden?</h3></a>
+        <a href="#"><h3>‘Accelerate the Endgame’: Obama’s Role in Wrapping Up the Primary</h3></a>
+        <a href="#"><h3>Opinion: The Global Coronavirus Crisis Is Poised to Get Much, Much Worse</h3></a>
+        <a href="#"><h3>What Doctors on the Front Lines Wish They’d Known a Month Ago</h3></a>
+        <a href="#"><h3>Upset Victory in Wisconsin Supreme Court Race Gives Democrats a Lift</h3></a>
       </section>
-      <section class="space">
-        <h2>More in Space and Astronomy</h2>
-        <section class="article-grid">  
-          <section>
-            <figure>
-              <img src="https://static01.nyt.com/images/2020/04/13/science/13SCI-APOLLO13-sm2/13SCI-APOLLO13-sm2-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="The damaged service module of the Apollo 13 mission, floating away after the astronauts jettisoned it before re-entry back to Earth.">
-              <small>NASA</small>
-            </figure>
-            <h3>Apollo 13’s Astronauts Survived Disaster 50 Years Ago. Could It Happen Again?</h3>
-            <time aria-label="12 h ago">12 h ago</time>
-          </section>
-          <section>
-            <figure>
-              <img src="https://static01.nyt.com/images/2020/04/12/us/apollo-13-moon-photos-as-they-shot-it-promo-1586728596196/apollo-13-moon-photos-as-they-shot-it-promo-1586728596196-threeByTwoSmallAt2X-v3.jpg?quality=75&auto=webp&disable=upscale" alt="">
-              <small></small>
-            </figure>
-            <h3>Apollo 13: As They Shot It</h3>
-            <time aria-label="12 h ago">12 h ago</time>
-          </section>
-          <section>
-            <figure>
-              <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-BREAKUP1/07SCI-BREAKUP1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="The comet 2I/Borisov captured by the Gemini North telescope in Hawaii in September.">
-              <small>Gemini Observatory, via Reuters</small>
-            </figure>
-            <h3>It Came From Outside Our Solar System and Now It’s Breaking Up</h3>
-            <time aria-label="April 7">April 7</time>
-          </section>
-          <section>
-            <figure>
-              <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-BLACKHOLE1/07SCI-BLACKHOLE1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="">
-              <small>Video by J.Y. Kim et al., Astronomy & Astrophysics<br>(2020)/Event Horizon Telescope</small>
-            </figure>
-            <h3>Blowtorch of the Gods Captured by Black Hole Image Makers</h3>
-            <time aria-label="April 7">April 7</time>
-          </section>
-          <section>
-            <figure>
-              <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-DARKMATTER-promo/07SCI-DARKMATTER-promo-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="">
-              <small>Gabby Jones for The New York Times</small>
-            </figure>
-            <h3>Will Coronavirus Freeze the Search for Dark Matter?</h3>
-            <time aria-label="April 7">April 7</time>
-          </section>
-          <section>
-            <figure>
-              <img src="https://static01.nyt.com/images/2020/04/06/science/06NASA1/06NASA1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="The “worm” logo was designed by Bruce Blackburn. He and his design firm partner, Richard Danne, overhauled the visual appearance for NASA in 1975.">
-              <small>Derek Brahney</small>
-            </figure>
-            <h3>NASA’s ‘Worm’ Logo Will Return to Space</h3>
-            <time aria-label="April 6">April 6</time>
+      
+      <section class="thumb-articles">
+        <section class="space">
+          <h2>More in Space and Astronomy</h2>
+          <section class="article-grid">  
+            <a href="#">
+              <figure>
+                <img src="https://static01.nyt.com/images/2020/04/13/science/13SCI-APOLLO13-sm2/13SCI-APOLLO13-sm2-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="The damaged service module of the Apollo 13 mission, floating away after the astronauts jettisoned it before re-entry back to Earth.">
+                <figcaption>NASA</figcaption>
+              </figure>
+              <h3>Apollo 13’s Astronauts Survived Disaster 50 Years Ago. Could It Happen Again?</h3>
+              <time aria-label="12 h ago">12 h ago</time>
+            </a>
+            <a href="#">
+              <figure>
+                <img src="https://static01.nyt.com/images/2020/04/12/us/apollo-13-moon-photos-as-they-shot-it-promo-1586728596196/apollo-13-moon-photos-as-they-shot-it-promo-1586728596196-threeByTwoSmallAt2X-v3.jpg?quality=75&auto=webp&disable=upscale" alt="">
+                <figcaption>&nbsp;</figcaption>
+              </figure>
+              <h3>Apollo 13: As They Shot It</h3>
+              <time aria-label="12 h ago">12 h ago</time>
+            </a>
+            <a href="#">
+              <figure>
+                <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-BREAKUP1/07SCI-BREAKUP1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="The comet 2I/Borisov captured by the Gemini North telescope in Hawaii in September.">
+                <figcaption>Gemini Observatory, via Reuters</figcaption>
+              </figure>
+              <h3>It Came From Outside Our Solar System and Now It’s Breaking Up</h3>
+              <time aria-label="April 7">April 7</time>
+            </a>
+            <a href="#">
+              <figure>
+                <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-BLACKHOLE1/07SCI-BLACKHOLE1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="">
+                <figcaption>Video by J.Y. Kim et al., Astronomy & Astrophysics<br>(2020)/Event Horizon Telescope</figcaption>
+              </figure>
+              <h3>Blowtorch of the Gods Captured by Black Hole Image Makers</h3>
+              <time aria-label="April 7">April 7</time>
+            </a>
+            <a href="#">
+              <figure>
+                <img src="https://static01.nyt.com/images/2020/04/07/science/07SCI-DARKMATTER-promo/07SCI-DARKMATTER-promo-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="">
+                <figcaption>Gabby Jones for The New York Times</figcaption>
+              </figure>
+              <h3>Will Coronavirus Freeze the Search for Dark Matter?</h3>
+              <time aria-label="April 7">April 7</time>
+            </a>
+            <a href="#">
+              <figure>
+                <img src="https://static01.nyt.com/images/2020/04/06/science/06NASA1/06NASA1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="The “worm” logo was designed by Bruce Blackburn. He and his design firm partner, Richard Danne, overhauled the visual appearance for NASA in 1975.">
+                <figcaption>NASA</figcaption>
+              </figure>
+              <h3>NASA’s ‘Worm’ Logo Will Return to Space</h3>
+              <time aria-label="April 6">April 6</time>
+            </a>
           </section>
         </section>
         <hr>
         <section class="editors-picks">
           <h2>Editor's Picks</h2>
+          <section class="article-grid">  
+            <a href="#">
+              <figure>
+                <img src="https://static01.nyt.com/images/2020/04/06/books/review/00zipperstein1/00zipperstein1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="A Jewish market in Novgorod, Russia, circa 1900.">
+                <figcaption>Jewish Chronicle/Heritage Images, via Getty Images</figcaption>
+              </figure>
+              <h3>What Were the Origins of the Holocaust?</h3>
+              <time aria-label="April 7">April 7</time>
+            </a>
+            <a href="#">
+              <figure>
+                <img src="https://static01.nyt.com/images/2020/04/08/dining/06Dairy1/06Dairy1-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="">
+                <figcaption>Alessandra Montalto/The New York Times</figcaption>
+              </figure>
+              <h3>A Rich (Very Rich) History of the Jewish Dairy Restaurant</h3>
+              <time aria-label="April 6">April 6</time>
+            </a>
+            <a href="#">
+              <figure>
+                <img src="https://static01.nyt.com/images/2020/04/13/fashion/13fashion-magazines-02/13fashion-magazines-02-threeByTwoSmallAt2X.jpg?quality=75&auto=webp&disable=upscale" alt="The cover of April’s Vogue Portugal.">
+                <figcaption>&nbsp;</figcaption>
+              </figure>
+              <h3>What’s the Point of a Fashion Magazine Now?</h3>
+              <time aria-label="April 9">April 9</time>
+            </a>
+          </section>
         </section>
       </section>
     </section>
