--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="main.css">
-  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;600&family=Arbutus+Slab&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@400;500;600&family=Arbutus+Slab&display=swap" rel="stylesheet">
   <title>Positioning and Floating Elements</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
           <button><img src="images/magnifier.svg" alt="Search button"></button>
           <a href="#">space & cosmos</a>
         </nav>
-        <a href="#"><img id="logo" src="images/logo.svg" alt="Search button"></a>
+        <a href="#"><img class="logo" src="images/logo.svg" alt="Search button"></a>
         <nav class="nav-right">
           <button class="btn">subscribe now</button>
           <button class="btn">log in</button>
@@ -422,5 +422,253 @@
         </section>
       </section>
     </section>
+    <footer>
+      <div class="top">
+        <a href="#"><img class="logo" src="images/logo.svg" alt="Search button"></a>
+        <a href="#">Go to Home Page »</a>
+      </div>
+      <nav>
+        <section>
+          <h3>News</h3>
+          <ul>
+            <li>
+              <a href="#">Home Page</a>
+            </li>
+            <li>
+              <a href="#">World</a>
+            </li>
+            <li>
+              <a href="#">U.S.</a>
+            </li>
+            <li>
+              <a href="#">Politics</a>
+            </li>
+            <li>
+              <a href="#">Election 2020</a>
+            </li>
+            <li>
+              <a href="#">New York</a>
+            </li>
+            <li>
+              <a href="#">Business</a>
+            </li>
+            <li>
+              <a href="#">Tech</a>
+            </li>
+            <li>
+              <a href="#">Science</a>
+            </li>
+            <li>
+              <a href="#">Sports</a>
+            </li>
+            <li>
+              <a href="#">Obituaries</a>
+            </li>
+            <li>
+              <a href="#">Today's Paper</a>
+            </li>
+            <li>
+              <a href="#">Corrections</a>
+            </li>
+          </ul>
+        </section>
+        <section>
+          <h3>Opinion</h3>
+          <ul>
+            <li>
+              <a href="#">Today's Opinion</a>
+            </li>
+            <li>
+              <a href="#">Op-Ed Columnists</a>
+            </li>
+            <li>
+              <a href="#">Editorials</a>
+            </li>
+            <li>
+              <a href="#">Op-Ed Contributors</a>
+            </li>
+            <li>
+              <a href="#">Letters</a>
+            </li>
+            <li>
+              <a href="#">Sunday Review</a>
+            </li>
+            <li>
+              <a href="#">Video: Opinion</a>
+            </li>
+          </ul>
+        </section>
+        <section>
+          <h3>Arts</h3>
+          <ul>
+            <li>
+              <a href="#">Today's Arts</a>
+            </li>
+            <li>
+              <a href="#">Art & Design</a>
+            </li>
+            <li>
+              <a href="#">Books</a>
+            </li>
+            <li>
+              <a href="#">Dance</a>
+            </li>
+            <li>
+              <a href="#">Movies</a>
+            </li>
+            <li>
+              <a href="#">Music</a>
+            </li>
+            <li>
+              <a href="#">Pop Culture</a>
+            </li>
+            <li>
+              <a href="#">Television</a>
+            </li>
+            <li>
+              <a href="#">Theater</a>
+            </li>
+            <li>
+              <a href="#">Video: Arts</a>
+            </li>
+          </ul>
+        </section>
+        <section>
+          <h3>Living</h3>
+          <ul>
+            <li>
+              <a href="#">Automobiles</a>
+            </li>
+            <li>
+              <a href="#">Crossword</a>
+            </li>
+            <li>
+              <a href="#">Education</a>
+            </li>
+            <li>
+              <a href="#">Food</a>
+            </li>
+            <li>
+              <a href="#">Health</a>
+            </li>
+            <li>
+              <a href="#">Jobs</a>
+            </li>
+            <li>
+              <a href="#">Love</a>
+            </li>
+            <li>
+              <a href="#">Magazine</a>
+            </li>
+            <li>
+              <a href="#">Parenting</a>
+            </li>
+            <li>
+              <a href="#">Real Estate</a>
+            </li>
+            <li>
+              <a href="#">Recipes</a>
+            </li>
+            <li>
+              <a href="#">Style</a>
+            </li>
+            <li>
+              <a href="#">T Magazine</a>
+            </li>
+            <li>
+              <a href="#">Travel</a>
+            </li>
+          </ul>
+        </section>
+        <section>
+          <h3>More</h3>
+          <ul>
+            <li>
+              <a href="#">Reader Center</a>
+            </li>
+            <li>
+              <a href="#">Wirecutter</a>
+            </li>
+            <li>
+              <a href="#">Live Events</a>
+            </li>
+            <li>
+              <a href="#">The Learning Network</a>
+            </li>
+            <li>
+              <a href="#">Tools & Services</a>
+            </li>
+            <li>
+              <a href="#">N.Y.C. Events Guide</a>
+            </li>
+            <li>
+              <a href="#">Multimedia</a>
+            </li>
+            <li>
+              <a href="#">Photography</a>
+            </li>
+            <li>
+              <a href="#">Video</a>
+            </li>
+            <li>
+              <a href="#">Newsletters</a>
+            </li>
+            <li>
+              <a href="#">NYT Store</a>
+            </li>
+            <li>
+              <a href="#">Times Journeys</a>
+            </li>
+            <li>
+              <a href="#">Manage My Account</a>
+            </li>
+          </ul>
+        </section>
+        <section>
+          <h3>Subscribe</h3>
+          <ul>
+            <li>
+              <a href="#">Home Page</a>
+            </li>
+            <li>
+              <a href="#">World</a>
+            </li>
+            <li>
+              <a href="#">U.S.</a>
+            </li>
+            <li>
+              <a href="#">Politics</a>
+            </li>
+            <li>
+              <a href="#">Election 2020</a>
+            </li>
+            <li>
+              <a href="#">New York</a>
+            </li>
+            <li>
+              <a href="#">Business</a>
+            </li>
+            <li>
+              <a href="#">Tech</a>
+            </li>
+            <li>
+              <a href="#">Science</a>
+            </li>
+            <li>
+              <a href="#">Sports</a>
+            </li>
+            <li>
+              <a href="#">Obituaries</a>
+            </li>
+            <li>
+              <a href="#">Today's Paper</a>
+            </li>
+            <li>
+              <a href="#">Corrections</a>
+            </li>
+          </ul>
+        </section>
+      </nav>
+    </footer>
 </body>
 </html>
