Finish project by adding lowest part of footer

--- a/index.html
+++ b/index.html
@@ -274,10 +274,10 @@
           “If you trace your cosmic roots,” said Abraham Loeb, a Harvard-Smithsonian astronomer who was not part of the team, “you wind up at inflation.”
         </p>
       </section>
-      <footer>
-        <figcaption>
+      <section class="article-end">
+        <p>
           A version of this article appears in print on March 18, 2014, Section A, Page 1 of the New York edition with the headline: Space Ripples Reveal Big Bang’s Smoking Gun. <a href="#">Order Reprints</a> | <a href="#">Today’s Paper</a> | <a href="#">Subscribe</a>
-        </figcaption>
+        </p>
         <div>
           <button class="btn">read 615 comments</button>
           <ul>
@@ -295,7 +295,7 @@
             </li>
           </ul>
         </div>
-      </footer>
+      </section>
       <aside>
         <h2>Editors' picks</h2>
         <hr>
@@ -679,6 +679,49 @@
           </ul>
         </section>
       </nav>
+      <section class="general-links">
+        <ul>
+          <li>
+            <a href="#">© 2020 The New York Times Company</a>
+          </li>
+          <li>
+            <a href="#">NYTCo</a>
+          </li>
+          <li>
+            <a href="#">Contact Us</a>
+          </li>
+          <li>
+            <a href="#">Work with us</a>
+          </li>
+          <li>
+            <a href="#">Advertise</a>
+          </li>
+          <li>
+            <a href="#">T Brand Studio</a>
+          </li>
+          <li>
+            <a href="#">Your Ad Choices</a>
+          </li>
+          <li>
+            <a href="#">Privacy</a>
+          </li>
+          <li>
+            <a href="#">Terms of Service</a>
+          </li>
+          <li>
+            <a href="#">Terms of Sale</a>
+          </li>
+          <li>
+            <a href="#">Site Map</a>
+          </li>
+          <li>
+            <a href="#">Help</a>
+          </li>
+          <li>
+            <a href="#">Subscriptions</a>
+          </li>
+        </ul>
+      </section>
     </footer>
 </body>
 </html>
